:bug: (Base tags) active state output wrong color

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,6 +18,9 @@
 .icon-document__pagination {
     @apply inline-flex h-4 w-4 items-center justify-center text-gray-700;
 }
+.disabled-icon-document__pagination {
+    @apply inline-flex h-4 w-4 items-center justify-center text-gray-400;
+}
 
 .icon-upload {
     @apply h-4 w-4 text-gray-400;
@@ -29,6 +32,9 @@
 
 .hover-document__pagination {
     @apply flex h-6 w-6 cursor-pointer items-center justify-center rounded transition-all duration-200 hover:bg-primary/10 hover:text-primary;
+}
+.disabled-document__pagination {
+    @apply flex h-6 w-6 items-center justify-center rounded;
 }
 
 .hover-text {
